--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 /* Estilos para el contenedor del login */
+html, body {
+  height: 100%; /* Asegura que el contenedor principal ocupe toda la altura */
+  margin: 0;
+  display: flex; /* Usa flexbox */
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
+}
 .login-container {
   width: 80%; /* Ancho del contenedor */
   max-width: 400px; /* Ancho máximo para dispositivos grandes */
   margin: 0 auto; /* Centra el contenedor horizontalmente */
   padding: 20px; /* Añade un poco de espacio interno */
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #f9f9f9;
 }
 /* Estilos para el contenedor del login en dispositivos pequeños */
@@ -40,67 +47,15 @@
   background-color: #0056b3;
 }
 
-.homead-container {
-  width: 80%;
-  margin: 20px auto;
-}
-
-.homead-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.homead-table th,
-.homead-table td {
-  padding: 8px;
-  border-bottom: 1px solid #ddd;
-}
-
-.homead-table th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-  text-align: left;
-}
-
-.homead-table tr:hover {
-  background-color: #f5f5f5;
-}
-
-.homead-container {
-  width: 80%;
-  margin: 20px auto;
-}
-
-.homead-container h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.homead-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.homead-table th,
-.homead-table td {
-  padding: 8px;
-  border-bottom: 1px solid #ddd;
-}
-
-.homead-table th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-  text-align: left;
-}
-
-.homead-table tr:hover {
-  background-color: #f5f5f5;
+/* HomeAdView.css */
+.homead-view-container {
+  width: 80%; /* Ancho del contenedor */
+  margin: 20px auto; /* Centra horizontalmente */
 }
 
 /* HomeAdController.css */
-.homead-controller-container {
-  width: 80%;
-  margin: 20px auto;
+.homead-table-container {
+  overflow-x: auto; /* Añade scroll horizontal si el contenido excede el ancho */
 }
 
 .homead-table {
