--- a/src/LoginStyle.css
+++ b/src/LoginStyle.css
@@ -1,23 +1,32 @@
 .login-background {
-  position: fixed; /* Fija la posición de la imagen en la ventana del navegador */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Coloca la imagen detrás de todo el contenido */
-  background-image: url('../src/images/fondoLogin.jpg')!important; /* Ruta relativa a la carpeta de la imagen */
-  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la ventana */
-  background-position: center; /* Centra la imagen */
+  z-index: -1;
+  background-image: url('../src/images/fondo2.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .login-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 300px;
-  margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.5); /* Color de fondo semi-transparente */
-  backdrop-filter: blur(10px); /* Aplica un efecto de desenfoque */
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.126); /* Color de fondo semi-transparente */
+  backdrop-filter: blur(10px); /* Efecto de desenfoque */
+}
+
+.login-title {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 .login-input {
@@ -25,7 +34,7 @@
   margin-bottom: 10px;
   padding: 8px;
   border: 1px solid #ccc;
-  border-radius: 3px;
+  border-radius: 5px;
   box-sizing: border-box;
 }
 
@@ -35,6 +44,6 @@
   background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 3px;
+  border-radius: 5px;
   cursor: pointer;
 }
