--- a/src/HomeStyle.css
+++ b/src/HomeStyle.css
@@ -23,3 +23,17 @@
     background-color: #fafafa; /* Color de fondo al pasar el mouse */
   }
   
+  .register-button {
+    background-color: #4CAF50; /* Color de fondo */
+    border: none; /* Sin borde */
+    color: white; /* Color del texto */
+    padding: 10px 20px; /* Relleno interno */
+    text-align: center; /* Alineación del texto */
+    text-decoration: none; /* Sin subrayado */
+    display: inline-block; /* Mostrar como bloque en línea */
+    font-size: 16px; /* Tamaño de la fuente */
+    margin: 4px 2px; /* Márgenes */
+    cursor: pointer; /* Cursor al pasar el ratón */
+    border-radius: 5px; /* Borde redondeado */
+  }
+  
