--- a/src/NavbarStyle.css
+++ b/src/NavbarStyle.css
@@ -1,33 +1,38 @@
-/* Estilos para el Navbar */
-nav {
-  background-color: #007bff; /* Color de fondo */
-  padding: 10px 20px; /* Espaciado interno */
-  width: 100%; /* Ancho completo */
-  position: fixed; /* Fijar en la parte superior */
-  top: 0; /* Ubicación en la parte superior */
-  left: 0; /* Alineación a la izquierda */
-  z-index: 1000; /* Z-index alto para superponer sobre otros elementos */
+.navbar {
+  background-color: #ffffff;
+  padding: 10px 20px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between; /* Distribuye el espacio entre los elementos */
 }
 
-ul {
-  list-style-type: none; /* Quita los puntos de la lista */
+.navbar-list {
+  list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  margin-right: auto; /* Mueve los enlaces hacia el lado izquierdo */
 }
 
-li {
-  display: inline;
-  margin-right: 20px; /* Espaciado entre elementos */
+.navbar-list li {
+  margin-right: 10px; /* Espaciado entre los botones */
 }
 
-a {
-  color: #fff; /* Color del texto */
-  text-decoration: none; /* Quita la subrayado del enlace */
-  font-weight: bold; /* Texto en negrita */
-  transition: color 0.3s, text-shadow 0.3s; /* Transición suave para el cambio de color y sombra del texto */
+.navbar-link {
+  color: #000; /* Color de la letra negro */
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 12px;
+  border-radius: 20px; /* Borde redondeado */
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s; /* Agregamos transición para el efecto de iluminación */
 }
 
-a:hover {
-  color: #ffd700; /* Cambia el color del texto al pasar el mouse */
-  text-shadow: 0 0 10px #ffd700; /* Agrega una sombra al texto al pasar el mouse */
+.navbar-link:hover {
+  background-color: #0056b3; /* Cambia el color de fondo al pasar el mouse */
+  color: #fff; /* Cambia el color del texto al pasar el mouse */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Efecto de iluminación al pasar el mouse */
 }
