--- a/src/NavbarStyle.css
+++ b/src/NavbarStyle.css
@@ -41,3 +41,30 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-color: transparent; /* Transparentar el borde al pasar el mouse */
 }
+
+
+.logout-button {
+  background-color: #dc3545; /* Color de fondo del botón */
+  color: #fff; /* Color del texto del botón */
+  border: none; /* Eliminar el borde del botón */
+  padding: 10px 20px; /* Espaciado interno del botón */
+  border-radius: 20px; /* Borde redondeado */
+  font-weight: bold; /* Texto en negrita */
+  cursor: pointer; /* Cursor de tipo puntero al pasar sobre el botón */
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s; /* Transiciones suaves */
+}
+
+.logout-button:hover {
+  background-color: #c82333; /* Cambio de color al pasar el mouse */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Sombra al pasar el mouse */
+}
+
+
+.navbar-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin-right: auto;
+  align-items: center; /* Alinear verticalmente los elementos */
+}
